apps/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - port: 80
      targetPort: 9696
