apps/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-lan
  namespace: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.wevelsiep.com`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
